--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 !.config/polybar/
 !.config/polybar/config.ini
 !.config/polybar/launch.sh
+!.config/chromium-flags.conf
 
 !.Xresources
 !.xinitrc
