--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 !.config/
 !.config/i3/
 !.config/i3/config
+!.config/autorandr/
+!.config/autorandr/**
 !.config/gtk-3.0/
 !.config/gtk-3.0/settings.ini
 !.config/gtk-4.0/
