systemd power management

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 !.config/polybar/config.ini
 !.config/polybar/launch.sh
 !.config/chromium-flags.conf
+!.config/logind.conf
 
 !.Xresources
 !.xinitrc
