polybar audio: remove explicit sink

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -163,7 +163,7 @@ label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
-sink = bluez_sink.CC_98_8B_B6_E8_23.a2dp_sink
+; sink = bluez_sink.CC_98_8B_B6_E8_23.a2dp_sink
 
 format-volume = <ramp-volume> <label-volume>
 ramp-volume-foreground = ${colors.primary}
