--- a/.ssh/config
+++ b/.ssh/config
@@ -14,5 +14,5 @@ Host github.com
 Host hcsi
 	Hostname server11.mjrc.ml
 	User zhoutz19
-	IdentityFile ~/.ssh/hcsi
-	LocalForward 5800 127.0.0.1:5800
+	# IdentityFile ~/.ssh/hcsi
+	# LocalForward 5800 127.0.0.1:5800
