--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 !.config/
 !.config/i3/
 !.config/i3/config
+!.config/tmux/
+!.config/tmux/tmux.conf
+!.config/alacritty
+!.config/alacritty/alacritty.yml
 !.config/autorandr/
 !.config/autorandr/**
 !.config/gtk-3.0/
