tmux conf for vim

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,7 @@
 set -g mouse on
 set -g history-limit 30000
 set-option -sa terminal-features ',alacritty:RGB'
+
+# LazyVim
+set-option -sg escape-time 10
+set-option -g focus-events on
